dark mode bug fixed

--- a/components/Profile/EditProfileModal.module.css
+++ b/components/Profile/EditProfileModal.module.css
@@ -1,4 +1,4 @@
-image.png.modalOverlay {
+.modalOverlay {
     position: fixed;
     inset: 0;
     z-index: 999;
